LOG:

         - 0.5.9  implemented test case TX/7.52/0.0
                  implemented test case TX/7.52/0.1
                  implemented test case TX/7.52/1.0
                  implemented test case TX/7.52/1.1
                  implemented test case TX/7.52/2.0
                  implemented test case TX/7.52/2.1
                  implemented test case TX/7.52/3.0
                  implemented test case TX/7.52/3.1
                  implemented test case TX/7.52/3.2
                  implemented test case TX/7.52/3.3 and fixed bug # 3008872
                  implemented test case TX/7.52/3.4
                  implemented test case TX/7.52/3.6
                  implemented test case TX/7.52/3.7
                  implemented test case TX/7.52/4.0
                  implemented test case TX/7.52/4.1
                  implemented test case TX/7.52/4.2
                  implemented test case TX/7.52/4.3
                  implemented test case TX/7.52/5.0
                  implemented test case TX/7.52/5.1
                  implemented test case TX/7.52/5.2
                  implemented test case TX/7.52/5.3
                  implemented test case TX/7.52/5.4
                  implemented test case TX/7.52/5.5
                  implemented test case TX/7.52/5.6
                  implemented test case TX/7.52/5.7
                  implemented test case TX/7.52/6.0
                  implemented test case TX/7.52/6.1
                  implemented test case TX/7.52/6.2
                  implemented test case TX/7.52/6.3

20100528 - 0.5.8  implemented test case TX/5.27/0.0
                  implemented test case TX/5.27/0.1
                  implemented test case TX/5.27/0.2
                  implemented test case TX/5.27/0.3
                  implemented test case TX/5.27/0.4
                  implemented test case TX/5.27/0.5
                  implemented test case TX/5.27/0.6
                  implemented test case TX/5.27/0.7
                  fixed bug # 3008437
